--- a/styles/skills.css
+++ b/styles/skills.css
@@ -65,6 +65,7 @@ p
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
 	text-shadow: rgba(0,0,0,.01) 0 0 1px;
+	text-align: justify;
 }
 p a
 {
@@ -685,7 +686,7 @@ section
 }
 .progress_bars
 {
-	margin-top: 92px;
+	margin-top: 30px;
 }
 .pb_col
 {
