--- a/styles/experience.css
+++ b/styles/experience.css
@@ -53,6 +53,7 @@ ul
 {
 	list-style: none;
 	margin-bottom: 0px;
+	padding-left: 10px;
 }
 p
 {
@@ -631,7 +632,7 @@ section
 .main_title_container
 {
 	width: 100%;
-	height: 183px;
+	height: 100px;
 }
 .main_subtitle
 {
@@ -642,17 +643,17 @@ section
 }
 .main_title
 {
-	font-size: 72px;
+	font-size: 65px;
 	font-weight: 800;
 	color: #100f3a;
 	line-height: 0.75;
-	margin-top: 15px;
+	margin-top: 5px;
 	margin-left: -4px;
 }
 .main_content_scroll
 {
-	margin-top: 134px;
-	max-height: calc(100% - 183px - 134px);
+	margin-top: 50px;
+	max-height: calc(100% - 130px - 50px);
 	padding-right: 100px;
 }
 .mCS-minimal.mCSB_scrollTools .mCSB_draggerRail, .mCS-minimal-dark.mCSB_scrollTools .mCSB_draggerRail
@@ -684,13 +685,13 @@ section
 }
 .exp_time
 {
-	width: 181px;
-	font-size: 24px;
+	width: 170px;
+	font-size: 26px;
 	font-weight: 700;
 	color: #8583e1;
 	line-height: 0.75;
-	text-align: right;
-	white-space: nowrap;
+	text-align: middle;
+	/* white-space: nowrap; */
 }
 .exp_content
 {
@@ -713,4 +714,5 @@ section
 .exp_text
 {
 	margin-top: 18px;
+	font-size: 14px;
 }
