--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -60,6 +60,7 @@ p
 	line-height: 1.85714;
 	font-weight: 500;
 	color: #838293;
+	text-align: justify;
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
 	text-shadow: rgba(0,0,0,.01) 0 0 1px;
@@ -520,22 +521,24 @@ section
 .main_title_container
 {
 	width: 100%;
-	height: 193px;
+	height: 200px;
 }
 .main_subtitle
 {
-	font-size: 30px;
+	font-size: 26px;
 	font-weight: 500;
 	color: #7a798c;
 	line-height: 0.75;
+	margin-top: 10px;
 }
 .main_title
 {
-	font-size: 92px;
+	font-size: 65px;
 	font-weight: 800;
+	font-family: Verdana, Geneva, sans-serif;
 	color: #100f3a;
 	line-height: 0.75;
-	margin-top: 12px;
+	margin-top: 30px;
 }
 .about_content
 {
@@ -543,7 +546,7 @@ section
 }
 .main_content_scroll
 {
-	margin-top: 72px;
+	margin-top: 45px;
 	max-height: calc(100% - 193px - 72px - 30px);
 	padding-right: 60px;
 }
@@ -568,19 +571,19 @@ section
 }
 .loaders
 {
-	margin-top: 98px;
+	margin-top: 50px;
 }
 .loader_container
 {
-	width: 25%;
-	height: 265px;
+	width: 20%;
+	height: 300px;
 	float: left;
 	padding-bottom: 70px;
 }
 .loader
 {
-	width: 195px;
-	height: 195px;
+	width: 180px;
+	height: 180px;
 	margin: 0 auto;
 	background: transparent;
 }
@@ -607,6 +610,7 @@ section
 	color: #100f3a;
 	text-transform: uppercase;
 	line-height: 0.75;
+	padding-top: 15px;
 }
 .loader_subtitle
 {
